# SD_Hack

./: .gitattributes  .gitignore  LICENSE  README.md
android/: .gitignore  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
android/.github/workflows/: android-build.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/flow/app/: AmbientMemory.kt  AppNames.kt  Ask.kt  BootReceiver.kt  ConversationStore.kt  Federation.kt  FlowAccessibilityService.kt  FlowApp.kt  FlowViewModel.kt  Index.kt  IndexingService.kt  Inference.kt  LlmEngine.kt  MainActivity.kt  NeoBrutalism.kt  OrtTextEmbedder.kt  PersistentIndex.kt  Protocol.kt  QrScanner.kt  (+3 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: README.md  pyproject.toml  requirements.txt
desktop/flow/: __init__.py  __main__.py  brain.py  cli.py  config.py  crypto.py  embeddings.py  federation.py  fusion.py  index.py  inference.py  llm.py  protocol.py  server.py  telemetry.py
desktop/flow/sensors/: __init__.py  files.py  trail_win.py  trove.py
desktop/flow/ui/: app.js  index.html  style.css
desktop/sample_docs/: parking.txt  receipt.txt  wifi.txt
desktop/tests/: conftest.py  test_crypto.py  test_fusion.py  test_index.py  test_protocol.py  test_smoke_e2e.py
docs/: flow-plan.md  flow-proposal.md  flow-technical-plan.md  flow-technical-spec.md
shared/: config.json  protocol.md
shared/prompts/: rag_answer.txt
(+2 files in other folders)
